{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 607,
  "lineage": "0c32cd66-c480-757c-8825-7a1dc0df4ff4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tfip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-01f6dc8a8e71bfa03",
            "domain": "vpc",
            "id": "eipalloc-0f3118148168cc20f",
            "network_interface": "eni-06cfb10cc37d5ce58",
            "private_dns": "ip-192-168-1-132.ap-south-1.compute.internal",
            "private_ip": "192.168.1.132",
            "public_dns": "ec2-15-207-37-214.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.207.37.214",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "mysql-os",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0019ac6129392a0f2",
            "arn": "arn:aws:ec2:ap-south-1:262324478358:instance/i-0643c18f736c9d792",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0643c18f736c9d792",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keywithtf",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d83b4cec6916d1b5",
            "private_dns": "ip-192-168-2-164.ap-south-1.compute.internal",
            "private_ip": "192.168.2.164",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0dcfc3ceb76b842f8",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-036a6e6faa1a18d1e",
            "tags": {
              "Name": "fayazOS-mysql"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e576b7a7c3651faa"
            ]
          },
          "dependencies": [
            "aws_security_group.fayaz_grp",
            "aws_subnet.subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-000cbce3e1b899ebd",
            "arn": "arn:aws:ec2:ap-south-1:262324478358:instance/i-060c6665025697f12",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-060c6665025697f12",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keywithtf",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f86772bff4ffffdf",
            "private_dns": "ip-192-168-1-232.ap-south-1.compute.internal",
            "private_ip": "192.168.1.232",
            "public_ip": "35.154.233.79",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0f11a397e021fc2d3",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-037f05ddb01db7af6",
            "tags": {
              "Name": "fayazOS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e576b7a7c3651faa"
            ]
          },
          "dependencies": [
            "aws_security_group.fayaz_grp",
            "aws_subnet.subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:262324478358:internet-gateway/igw-042fad56ea9cc70af",
            "id": "igw-042fad56ea9cc70af",
            "owner_id": "262324478358",
            "tags": {
              "Name": "fayaz-int-gw"
            },
            "vpc_id": "vpc-014459d2ee1fa0215"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3118148168cc20f",
            "id": "nat-0165e9196befdc73a",
            "network_interface_id": "eni-06cfb10cc37d5ce58",
            "private_ip": "192.168.1.132",
            "public_ip": "15.207.37.214",
            "subnet_id": "subnet-037f05ddb01db7af6"
          },
          "dependencies": [
            "aws_eip.tfip",
            "aws_internet_gateway.gw",
            "aws_subnet.subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04ab0981c4f41aaab",
            "owner_id": "262324478358",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-042fad56ea9cc70af",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fayaz-public"
            },
            "vpc_id": "vpc-014459d2ee1fa0215"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0126f49febb4d9602",
            "owner_id": "262324478358",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0165e9196befdc73a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fayaz-private"
            },
            "vpc_id": "vpc-014459d2ee1fa0215"
          },
          "dependencies": [
            "aws_eip.tfip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gw",
            "aws_subnet.subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052c0fb3b31041cf9",
            "route_table_id": "rtb-04ab0981c4f41aaab",
            "subnet_id": "subnet-037f05ddb01db7af6"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.rt",
            "aws_subnet.subnet1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_association2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e974c43d16094a6",
            "route_table_id": "rtb-0126f49febb4d9602",
            "subnet_id": "subnet-036a6e6faa1a18d1e"
          },
          "dependencies": [
            "aws_eip.tfip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.rt2",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fayaz_grp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:262324478358:security-group/sg-0e576b7a7c3651faa",
            "description": "allow ssh and httpd and mysql",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e576b7a7c3651faa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPD Port",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPD Port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Icmp",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Port",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "fayaz_grp",
            "name_prefix": null,
            "owner_id": "262324478358",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fayaz_sec_grp"
            },
            "timeouts": null,
            "vpc_id": "vpc-014459d2ee1fa0215"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:262324478358:subnet/subnet-037f05ddb01db7af6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-037f05ddb01db7af6",
            "map_public_ip_on_launch": true,
            "owner_id": "262324478358",
            "tags": {
              "Name": "fayaz-pub-1a"
            },
            "vpc_id": "vpc-014459d2ee1fa0215"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:262324478358:subnet/subnet-036a6e6faa1a18d1e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.2.0/24",
            "id": "subnet-036a6e6faa1a18d1e",
            "map_public_ip_on_launch": false,
            "owner_id": "262324478358",
            "tags": {
              "Name": "fayaz-prvt-1b"
            },
            "vpc_id": "vpc-014459d2ee1fa0215"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:262324478358:vpc/vpc-014459d2ee1fa0215",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0ee2b0833a953d773",
            "default_route_table_id": "rtb-00f2b3fe6740dd9af",
            "default_security_group_id": "sg-006761ed3c3a9ba2a",
            "dhcp_options_id": "dopt-7dd23116",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-014459d2ee1fa0215",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00f2b3fe6740dd9af",
            "owner_id": "262324478358",
            "tags": {
              "Name": "fayaz-vpc"
            }
          }
        }
      ]
    }
  ]
}